It is now possible to collapse nodes (still buggy of course)
Problems include:
- If an even number of ancestors on different levels of a given node are collapsed, that node is displayed
- The space released by collapsing nodes is not used for other nodes
- Descendants of nodes that are being uncollapsed fly in from the origin rather than from their ancestor's position

--- a/app/styles/hierarchy.css
+++ b/app/styles/hierarchy.css
@@ -12,6 +12,10 @@
 	stroke-width: 1.5px;
 }
 
+.emuhierarchy-node circle.collapsed {
+	fill: red;
+}
+
 .emuhierarchy-node text {
 	font-size:10px;
 	font-family:sans-serif;
